[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Scripts/Drop.gd" type="Script" id=1]
[ext_resource path="res://ShieldDrop.tscn" type="PackedScene" id=2]
[ext_resource path="res://EnergyDrop.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sound/bling.wav" type="AudioStream" id=4]



[sub_resource type="BoxShape" id=1]

extents = Vector3( 1, 1, 1 )

[node name="Drop" type="Spatial"]

script = ExtResource( 1 )
speed = 75
ShieldDrop = ExtResource( 2 )
EnergyDrop = ExtResource( 3 )

[node name="DropCollision" type="Area" parent="." index="0"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = false
monitorable = false
collision_layer = 2
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape" type="CollisionShape" parent="DropCollision" index="0"]

shape = SubResource( 1 )
disabled = false

[node name="DropSound" type="AudioStreamPlayer3D" parent="." index="1"]

stream = ExtResource( 4 )
attenuation_model = 0
unit_db = 6.0
unit_size = 3.0
max_db = 3.0
pitch_scale = 1.0
autoplay = true
max_distance = 0.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 0
_sections_unfolded = [ "Doppler" ]

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="." index="2"]

aabb = AABB( -1, -1, -1, 2, 2, 2 )

[connection signal="area_shape_entered" from="DropCollision" to="." method="_on_DropCollision_area_shape_entered"]

[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]


